--- a/style.css
+++ b/style.css
@@ -1,4 +1,15 @@
-#gallery {
-  width: 100vw;
-  height: 100vh;
+* {
+  margin: 0;
+  padding: 0;
+}
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+}
+
+canvas {
+  background: #77f;
+  display: block;
 }
